# bms_demo

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/arm/bms_demo_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  bms_demo_nrf52840.dts  bms_demo_nrf52840.yaml  bms_demo_nrf52840_defconfig  board.cmake
dts/bindings/: nw,n58.yaml  st,lis2dw12xd.yaml  ti,bq769x2.yaml
dts/bindings/sensor/: st,lis2dw12-i2c.yaml
src/: main.c
src/app/: CMakeLists.txt  bat_ble.c  bat_ble_uart.c  bat_led.c  comm.c  comm.h  gsensor.c  gsensor.h  monitor.c  monitor.h
src/app/st_mems1_datalogextended/: CMakeLists.txt  Serial_CMD.h  com.c  com.h  demo_serial.c  demo_serial.h  iks01a3_conf.h  iks01a3_motion_sensors.h  lis2dw12.h  lis2dw12_reg.h  nucleo_f401re_errno.h  nucleo_main.c  nucleo_main.h  sensor_commands.c  sensor_commands.h  serial_protocol.c  serial_protocol.h
src/drivers/: CMakeLists.txt  Kconfig
src/drivers/bq769x2/: CMakeLists.txt  Kconfig  bq769x2.c  bq769x2.h
src/drivers/lis2dw12/: CMakeLists.txt  Kconfig  lis2dw12_i2c.c  lis2dw12xd.c  lis2dw12xd.h  lis2dw12xd_trigger.c
src/include/drivers/: sensor.h
